--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -4,7 +4,9 @@
 */
 html{
 	color:#000;
-	background:#FFF;
+	// background: rgb(240, 235, 248);
+	background-image: url("haikei.jpg");
+	background-size: cover;
 }
 /*
 	TODO remove settings on BODY since we can't namespace it.
@@ -33,13 +35,17 @@ form,
 fieldset,
 legend,
 input,
-textarea,
 p,
 blockquote,
 th,
 td {
 	margin:0;
 	padding:0;
+}
+textarea {
+	resize: vertical;
+	height: 480px;
+	width: 280px;
 }
 table {
 	border-collapse:collapse;
